...
      BuildingLongName: "Administration Building",
      Address: "7141, Sherbrooke West",
      Latitude: 45.457984,
      Longitude: -73.639834,
    },
    {
      Campus: "SGW",
      Building: "B",
      BuildingName: "B Building",
      BuildingLongName: "B Annex",
      Address: "2160 Bishop Street",
      Latitude: 45.497856,
      Longitude: -73.579588,
...
      Latitude: 45.497101,
      Longitude: -73.579907,
    },
    {
      Campus: "SGW",
      Building: "VA",
      BuildingName: "VA Building",
      BuildingLongName: "Visual Arts Building",
      Address: "1395 Rene Levesque W",
      Latitude: 45.495543,
      Longitude: -73.573795,
    },
    {
...
