...

  return (
    <View style={ButtonsStyles.searchWrapper}>
      {/* The Google Places Autocomplete field */}
      <GooglePlacesAutocomplete
        ref={googlePlacesRef}
        placeholder="Search for places, coffee shops, restaurants..."
        fetchDetails={true}
        onPress={handleSelectSuggestion}
        onFail={(error) => console.error("GooglePlacesAutocomplete failed:", error)}
        query={{
          key: googleMapsKey,
          language: "en",
...
