...

  const route = useRoute<{ key: string; name: string; params: RouteParams }>();

  const destinationObject = route.params?.destination; // pass destination to second screen
  const [directionsRoute, setDirectionsRoute] = useState<LatLng | null>(null); // create directions route state
  const [transportMode, setTransportMode] = useState<
    "DRIVING" | "WALKING" | "TRANSIT"
  >("DRIVING");
  const HALL_BUILDING: LatLng = {
    latitude: 45.4973223,
    longitude: -73.5790288,
  }; // start point of shuttle routing
  const LOYOLA_CAMPUS: LatLng = {
...
            name="map-pin"
            size={16}
            color="gray"
            style={{ marginRight: 8 }}
          />
          <GooglePlacesAutocomplete
            placeholder={"Destination"} // Placeholder restored
            fetchDetails
            onPress={(data, details) =>
              details &&
              handleLocationSelect(
                details,
                setDestination,
...
