...
    hallwayData.features.forEach((feature: Feature) => {
      if (feature.geometry.type === 'MultiLineString') {
        const lines: MultiLineString = feature.geometry as MultiLineString;
  
        lines.coordinates.forEach((line) => {
          for (let i = 0; i < line.length - 1; i++) {
            const from = line[i];
            const to = line[i + 1];
  
            const fromKey = JSON.stringify(from);
            const toKey = JSON.stringify(to);
  
            
...
