...
        latitude: origin.coordinate.latitude,
        longitude: origin.coordinate.longitude,
      };
      
    navi.dispatch(
      CommonActions.navigate({
        name: 'Directions',
        params: {
          Properties: selectedProperties,
          origin: originProps,
          destination: destProps,
        },
      })
...
              style={directionModalStyles.modalButton}
              onPress={() => {
                setDirectionModalVisible(false);
                navigateToDirections(userLocation, selectedProperties);
              }}
            >
              <Text>Current Location → Selected Building</Text>
            </TouchableOpacity>
            
            <TouchableOpacity 
              style={directionModalStyles.modalButton}
              onPress={() => {
                setDirectionModalVisible(false);
...
