appId: "com.i_amtheguy.potato"  # Replace with your actual app ID (package name or bundle identifier)
---
- launchApp

- tapOn: "Directions"

- tapOn: "from"

- inputText: "Concordia Montreal"

- tapOn: "Concordia University, Boulevard De Maisonneuve Ouest, Montreal, QC, Canada"

- tapOn: "Destination"

- inputText: "Atwater Montreal"

- tapOn: "Atwater Avenue, Montreal, QC, Canada"

- pressKey: Enter

- tapOn:
    id: "WALKING"
- tapOn:
    id: "DRIVING"
- tapOn:
    id: "TRANSIT"

# Zoom out to see the path
# Screen Record for the whole thing